# ChaiScript_Extras

./: CMakeLists.txt  README.md  biicode.cmake  biicode.conf  main.cpp
include/chaiscript/extras/: math.hpp  string_id.hpp  string_methods.hpp
tests/: math.cpp  string_id.cpp  string_methods.cpp
